tests/typechecker/should_pass/recursive_eq.csp
datatype A  = F1.B | F2.B
subtype  B = F1.C
subtype  C = F2.B
datatype D = IfTrue1.A

