tests/typechecker/should_fail/subtypes_1.csp
datatype X = A | B.{0}
datatype Y = C.Int | D.Bool

subtype X' = A | C.{0}
